--- a/css/style.css
+++ b/css/style.css
@@ -28,16 +28,17 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 95vh
+    min-height: 95vh;
 }
 
 .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     max-width: 600px;
     width: 90%;
-    background: white;
+    background: var(--White);
     border-radius: 10px; 
 }
 
@@ -103,7 +104,6 @@ button:hover {
 
 @media (min-width: 768px) {
     .container-parent {
-        height: 95vh;
         display: flex;
     }
 
